Add engines info to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "crown-clothing-server",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.13.1",
+    "npm": "6.13.4"
+  },
   "scripts": {
     "client": "cd client && npm run start",
     "server": "nodemon server.js",
